crates/gammalooprs/src/graph/snapshots/gammalooprs__graph__lmb__test__compatible_sub_lmb-5.snap
---
source: crates/gammalooprs/src/graph/lmb.rs
expression: "g.dot_lmb_of(&subgraph, &sub_lmb)"
---
digraph {
  node	 [shape=circle,height=0.1,label=""];
  overlap = "scale";
  layout = "neato";
  start=2;
  0	 [label=""];
  1	 [label=""];
  0:0:s	-> 0:1:s	 [id=0  color="red:blue;0.5" label="Q(0)"];
  0:2	-> 1:3	 [id=1  color="gray" label="Q(1)"];
  1:4:s	-> 1:5:s	 [id=2  color="red:blue;0.5" label="Q(2)"];
}
